<resources>
    <string name="AppName">Nogram</string>
    <string name="AppNameBeta">Nogram</string>
    <string name="LanguageName">English</string>
    <string name="English">English</string>
    <string name="LanguageNameInEnglish">English</string>
    <string name="LanguageCode">en</string>
    <string name="ContinueOnThisLanguage">Continue in English</string>
    <string name="YourPhone">Your phone</string>
    <string name="StartText">Please confirm your country code and enter your phone number.</string>
    <string name="ChooseCountry">Choose a country</string>
    <string name="WrongCountry">Wrong country code</string>
    <string name="YourCode">Phone verification</string>
    <string name="SentSmsCode">We\'ve sent an SMS with an activation code to your phone <![CDATA[<b>]]>%1$s<![CDATA[</b>]]>.</string>
    <string name="SentAppCode">We\'ve sent the code to the <![CDATA[<b>]]>Nogram<![CDATA[</b>]]> app on your other device.</string>
    <string name="SentCallCode">We\'ve sent an activation call to your phone <![CDATA[<b>]]>%1$s<![CDATA[</b>]]>.\n\nDon\'t take it, Nogram will process everything automatically.</string>
    <string name="SentCallOnly">We are calling your phone <![CDATA[<b>]]>%1$s<![CDATA[</b>]]> to dictate a code.</string>
    <string name="CallText">We will call you in %1$d:%2$02d</string>
    <string name="SmsText">We will send you an SMS in %1$d:%2$02d</string>
    <string name="Calling">Calling you...</string>
    <string name="Code">Code</string>
    <string name="WrongNumber">Wrong number?</string>
    <string name="DidNotGetTheCode">Didn\'t get the code?</string>
    <string name="CancelAccountReset">Cancel account reset</string>
    <string name="CancelAccountResetInfo">Somebody with access to your phone number <![CDATA[<b>]]>%1$s<![CDATA[</b>]]> has requested to delete your Nogram account and reset your 2-Step Verification password.\n\nIf this wasn\'t you, please enter the code we\'ve just sent you via SMS to your number.</string>
    <string name="ResetAccount">Reset account</string>
    <string name="ResetAccountInfo">Since the account <![CDATA[<b>]]>%1$s<![CDATA[</b>]]> is active and protected by a password, we will delete it in 1 week for security purposes.\n\nYou can cancel this process at any time.</string>
    <string name="ResetAccountStatus">You\'ll be able to reset your account in:</string>
    <string name="ResetAccountCancelledAlert">Your recent attempts to reset this account have been cancelled by its active user. Please try again in 7 days.</string>
    <string name="ResetAccountButton">RESET</string>
    <string name="CancelLinkExpired">Link is invalid or expired.</string>
    <string name="CancelLinkSuccess">The deletion process was cancelled for your account %1$s. You may close this window now.</string>
    <string name="YourName">Your name</string>
    <string name="RegisterText">Set up your first and last name</string>
    <string name="FirstName">First name (required)</string>
    <string name="LastName">Last name (optional)</string>
    <string name="CancelRegistration">Cancel registration</string>
    <string name="PaymentSuccessfullyPaid">You have just successfully transferred %1$s to %2$s for %3$s</string>
    <string name="PaymentSuccessfullyPaidNoItem">You have just successfully transferred %1$s to %2$s</string>
    <string name="PaymentCheckout">Checkout</string>
    <string name="PaymentShippingMethod">Shipping methods</string>
    <string name="PaymentNoShippingMethod">Sorry, it is not possible to deliver to your address.</string>
    <string name="PaymentShippingInfo">Shipping information</string>
    <string name="PaymentShippingAddress">Shipping address</string>
    <string name="PaymentShippingAddress1Placeholder">Address 1 (Street)</string>
    <string name="PaymentShippingAddress2Placeholder">Address 2 (Street)</string>
    <string name="PaymentShippingCityPlaceholder">City</string>
    <string name="PaymentShippingStatePlaceholder">State</string>
    <string name="PaymentShippingCountry">Country</string>
    <string name="PaymentShippingZipPlaceholder">Postcode</string>
    <string name="PaymentShippingReceiver">Receiver</string>
    <string name="PaymentShippingName">Full Name</string>
    <string name="PaymentShippingPhoneNumber">Phone Number</string>
    <string name="PaymentShippingEmailPlaceholder">E-Mail</string>
    <string name="PaymentShippingSave">Save Shipping Information</string>
    <string name="PaymentShippingSaveInfo">You can save your shipping info for future use.</string>
    <string name="PaymentCardInfo">Payment info</string>
    <string name="PaymentCardTitle">Payment card</string>
    <string name="PaymentCardNumber">Card Number</string>
    <string name="PaymentCardCvv">Security Code (CVV)</string>
    <string name="PaymentCardExpireDate">MM/YY</string>
    <string name="PaymentBillingAddress">Billing address</string>
    <string name="PaymentCardNameTitle">Card holder</string>
    <string name="PaymentCardName">Name Surname</string>
    <string name="PaymentCardSavePaymentInformation">Save Payment Information</string>
    <string name="PaymentCardSavePaymentInformationInfoLine1">You can save your payment info for future use.</string>
    <string name="PaymentCardSavePaymentInformationInfoLine2">Please *turn on Two-Step Verification* to enable this.</string>
    <string name="PaymentTransactionReview">Transaction Review</string>
    <string name="PaymentTransactionMessage">Do you really want to transfer %1$s to the %2$s bot for %3$s?</string>
    <string name="PaymentTransactionTotal">Total</string>
    <string name="PaymentInvoice">INVOICE</string>
    <string name="PaymentTestInvoice">TEST INVOICE</string>
    <string name="PaymentCheckoutPay">PAY %1$s</string>
    <string name="PaymentCheckoutMethod">Payment method</string>
    <string name="PaymentCheckoutProvider">Payment provider</string>
    <string name="PaymentCheckoutName">Name</string>
    <string name="PaymentCheckoutPhoneNumber">Phone number</string>
    <string name="PaymentCheckoutEmail">Contact address</string>
    <string name="PaymentCheckoutShippingMethod">Shipping method</string>
    <string name="PaymentReceipt">Receipt</string>
    <string name="PaymentConfirmationNewCard">Choose a different card</string>
    <string name="PaymentConfirmationMessage">Your card %1$s is on file. To pay with this card, please enter your 2-Step-Verification password.</string>
    <string name="PaymentPrecheckoutFailed">Sorry, the payment was cancelled by the bot.</string>
    <string name="PaymentFailed">Sorry, the payment was declined.</string>
    <string name="PaymentConnectionFailed">Unable to reach payment server. Please check your internet connection and try again.</string>
    <string name="PaymentWarning">Warning</string>
    <string name="PaymentWarningText">Neither Nogram, nor %1$s will have access to your credit card information. Credit card details will be handled only by the payment system, %2$s.\n\nPayments will go directly to the developer of %1$s. Nogram cannot provide any guarantees, so proceed at your own risk. In case of problems, please contact the developer of %1$s or your bank.</string>
    <string name="NewConversationShortcut">New conversation</string>
    <string name="Settings">Settings</string>
    <string name="Contacts">Contacts</string>
    <string name="NewGroup">New Group</string>
    <string name="Yesterday">yesterday</string>
    <string name="NoResult">No results</string>
    <string name="NoChats">No chats yet...</string>
    <string name="NoChatsHelp">Start messaging by pressing the\nnew message button in the bottom right corner\nor tap the menu button for more options.</string>
    <string name="WaitingForNetwork">Waiting for network...</string>
    <string name="Connecting">Connecting...</string>
    <string name="ConnectingToProxy">Connecting to proxy...</string>
    <string name="ConnectingToProxyTapToDisable">Tap here to disable proxy...</string>
    <string name="ConnectingToProxyDisable">Disable</string>
    <string name="ConnectingToProxyEnable">Enable</string>
    <string name="EnableProxyAlert">Are you sure you want to enable this proxy?</string>
    <string name="EnableProxyAlert2">You can change your proxy server later in the Settings (Data and Storage).</string>
    <string name="ConnectingToProxyDisableAlert">Are you sure you want to disable proxy server %1$s? You can reenable it in the Settings later (Data and Storage).</string>
    <string name="Updating">Updating...</string>
    <string name="NewSecretChat">New Secret Chat</string>
    <string name="AwaitingEncryption">Waiting for %s to get online...</string>
    <string name="EncryptionRejected">Secret chat cancelled</string>
    <string name="EncryptionProcessing">Exchanging encryption keys...</string>
    <string name="EncryptedChatStartedOutgoing">%s joined your secret chat.</string>
    <string name="EncryptedChatStartedIncoming">You joined the secret chat.</string>
    <string name="ClearHistory">Clear history</string>
    <string name="ClearHistoryCache">Delete from cache</string>
    <string name="DeleteChat">Delete and exit</string>
    <string name="DeleteChatUser">Delete chat</string>
    <string name="HiddenName">Deleted Account</string>
    <string name="SelectChat">Select Chat</string>
    <string name="PhotoTip">Tap and hold to view</string>
    <string name="CompatibilityChat">%1$s is using an older version of Nogram, so secret photos will be shown in compatibility mode.\n\nOnce %2$s updates Nogram, photos with timers for 1 minute or less will start working in \'Tap and hold to view\' mode, and you will be notified whenever the other party takes a screenshot.</string>
    <string name="SearchMessages">MESSAGES</string>
    <string name="Search">Search</string>
    <string name="MuteNotifications">Mute notifications</string>
    <string name="MuteFor">Mute for %1$s</string>
    <string name="UnmuteNotifications">Unmute</string>
    <string name="WillUnmuteIn">In %1$s</string>
    <string name="MuteDisable">Disable</string>
    <string name="Hashtags">HASHTAGS</string>
    <string name="Recent">RECENT</string>
    <string name="ChatHints">CHATS</string>
    <string name="ChatHintsDelete">Delete %1$s from suggestions?</string>
    <string name="LinkPreview">Link preview</string>
    <string name="Draft">Draft</string>
    <string name="HistoryCleared">History was cleared</string>
    <string name="ArticleByAuthor">by %1$s</string>
    <string name="ArticleDateByAuthor">%1$s by %2$s</string>
    <string name="PreviewFeedback">Leave feedback about this preview</string>
    <string name="SendStickerPreview">Send Sticker</string>
    <string name="ViewPackPreview">View Pack</string>
    <string name="PinToTop">Pin to top</string>
    <string name="Cancel">Cancel</string>
    <string name="save">save</string>
    <string name="reminder_date">Date</string>
    <string name="reminder_time">Time</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="font_default">Deafult telegram font</string>
    <string name="font_faraz">Faaz font</string>
    <string name="font_iran_sans">Iran sans mobile</string>
    <string name="font_iran_sans_bold">Iran sans bold</string>
    <string name="font_iran_sans_light">Iran sans light</string>
    <string name="font_iran_sans_medium">Iran sans medium</string>
    <string name="font_iran_sans_ultra_light">Iran sans ultra light</string>
    <string name="font_bnazanin">Nazanin font</string>
    <string name="font_byekan">Byekan font</string>
    <string name="AllTab"> All Tab</string>
    <string name="UsersTab"> Users Tab</string>
    <string name="GroupTab">Group Tab</string>
    <string name="SuperGroupTab">Super Group Tab</string>
    <string name="AllGroupTab">All Group Tab</string>
    <string name="ChanelsTab">Chanels Tab</string>
    <string name="BotsTab">Bots Tab</string>
    <string name="FavooriteTab">FavooriteTab</string>
</resources>